/*
 * Hello Minecraft! Launcher.
 * Copyright (C) 2018  huangyuhui <huanghongxun2008@126.com>
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see {http://www.gnu.org/licenses/}.
 */

group 'org.jackhuang'
version '3.0'

buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'org.tukaani:xz:1.8'
    }
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    repositories {
        mavenCentral()
        jcenter()
    }

	sourceCompatibility = 1.8

    dependencies {
        compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
        compile group: 'org.tukaani', name: 'xz', version: '1.8'
        compile group: 'org.hildan.fxgson', name: 'fx-gson', version: '3.1.0'
        compile group: 'org.jenkins-ci', name: 'constant-pool-scanner', version: '1.2'
        compile group: 'org.spacehq', name: 'opennbt', version: '1.0'
        testCompile group: 'junit', name: 'junit', version: '4.12'
    }

}
